--- a/style.css
+++ b/style.css
@@ -21,6 +21,18 @@ body {
     font-weight: bold; 
 }
 
+.navbar-nav {
+    display: flex;
+    flex-direction: row;
+}
+
+.nav-grid {
+    display: grid !important;
+    grid-template-columns: repeat(5, 1fr) !important;
+    justify-items: center !important;
+    align-items: flex-start !important;
+}
+
 .container, .bg {
     opacity: 1;
     transform: matix(1, 0, 0, 1, 0, 0);
@@ -51,7 +63,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    margin-top: 6vh;
+    margin-top: 12vh;
     margin-left: 4vw;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -89,11 +101,11 @@ body {
     align-self: center;
 }
 
-#vide {
+/*#vide {
     width: 100vw;
     height: 100vh;
     position: fixed;
-}
+}*/
 
 .footer-grid {
     color: white;
@@ -103,3 +115,30 @@ body {
     grid-template-columns: 6fr 1fr;
 }
 
+/* 
+  ##Device = Most of the Smartphones Mobiles (Portrait)
+  ##Screen = B/w 320px to 479px
+*/
+
+@media (min-width: 320px) and (max-width: 480px) {
+
+}
+
+
+
+
+/* 
+  ##Device = Laptops, Desktops
+  ##Screen = B/w 1025px to 1280px
+*/
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+    
+    .navbar-nav {
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: flex;
+    }
+
+}
