--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ body {
     align-items: stretch;
     margin-top: 12vh;
     margin-left: 4vw;
+    color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
