--- a/style.css
+++ b/style.css
@@ -64,7 +64,8 @@ body {
     flex-direction: column;
     align-items: stretch;
     margin-top: 12vh;
-    margin-left: 4vw;
+    margin-left: 5vw;
+    color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
