--- a/style.css
+++ b/style.css
@@ -28,10 +28,15 @@ body {
 
 .nav-grid {
     display: grid !important;
-    grid-template-columns: repeat(5, 1fr) !important;
+    grid-template-columns: repeat(4, 1fr) !important;
     justify-items: center !important;
     align-items: flex-start !important;
 }
+
+.nav-grid a i:hover {
+    color: #ff6ec7;
+}
+
 
 .container, .bg {
     opacity: 1;
@@ -83,10 +88,25 @@ body {
     text-align: start;
 }
 
+#text-block {
+    font-size: 3vh;
+} 
+
 .projects-grid {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.projects-grid img {
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+    transition: all 1s;
+}
+
+.projects-grid img:hover {
+    transform: scale(1.3);
 }
 
 .flat-button {
@@ -116,16 +136,40 @@ body {
     grid-template-columns: 6fr 1fr;
 }
 
-/* 
-  ##Device = Most of the Smartphones Mobiles (Portrait)
-  ##Screen = B/w 320px to 479px
-*/
-
-@media (min-width: 320px) and (max-width: 480px) {
-
+footer p {
+    margin-left: 3vw;
 }
 
 
+/*
+##Device = small devices and most phones 
+*/
+
+@media (min-width: 480px) {
+    .navbar-nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+}
+
+/* 
+  ##Device = Most tablets
+*/
+
+@media (min-width: 768px) {
+    .navbar-nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    .projects-grid {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+}
 
 
 /* 
@@ -135,11 +179,11 @@ body {
 
 @media (min-width: 1025px) and (max-width: 1280px) {
     
-    .navbar-nav {
-        text-decoration: none;
-        font-size: 25px;
-        color: #818181;
+    .projects-grid {
+        margin-top: 5px;
         display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
 
 }
