--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
     flex-direction: column;
     align-items: stretch;
     margin-top: 12vh;
-    margin-left: 5vw;
+    margin-left: 3vw;
     color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -86,6 +86,8 @@ body {
     font-size: .9rem;
     font-family: sans-serif;
     text-align: start;
+    margin-right: .5vw;
+    width: 100%;
 }
 
 #text-block {
@@ -122,6 +124,15 @@ body {
     align-self: center;
 }
 
+.flat-button:hover {
+    background-color: #ff6ec7;
+    border: none;
+    padding: 10px 18px;
+    color: white;
+    text-decoration: none;
+}
+
+
 /*#vide {
     width: 100vw;
     height: 100vh;
@@ -134,10 +145,15 @@ body {
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: 6fr 1fr;
+    align-items: flex-end;
 }
 
 footer p {
     margin-left: 3vw;
+}
+
+#footer-text {
+    visibility: hidden;
 }
 
 
@@ -169,6 +185,10 @@ footer p {
         flex-direction: row;
         justify-content: center;
     }
+
+    #footer-text {
+        visibility: visible;
+    }
 }
 
 
@@ -184,6 +204,10 @@ footer p {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+    }
+
+    #footer-text {
+        visibility: visible;
     }
 
 }
