--- a/style2.css
+++ b/style2.css
@@ -116,6 +116,20 @@ input {
     display: table;
     clear: both;
   }
+
+  .footer-grid {
+    color: white;
+    background-color: #91AA4A; 
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 6fr 1fr;
+    align-items: flex-end;
+    margin-left: 3vw;
+}
+
+#footer-text {
+    visibility: hidden;
+}
   
   /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 600px) {
@@ -123,4 +137,9 @@ input {
       width: 100%;
       margin-top: 0;
     }
+
+    #footer-text {
+        visibility: visible;
+    }
+    
   }
