--- a/style3.css
+++ b/style3.css
@@ -41,6 +41,7 @@ h1 {
     color: #ff6ec7;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     letter-spacing: 1px;
+    padding-top: 10vh;
     padding-bottom: 2vh;
     margin-left: 4vw;
 }
@@ -48,6 +49,46 @@ h1 {
 p {
     max-width: 50vh;
     margin-left: 5vw;
+    margin-right: 5vw;
     color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.grid1 {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 8fr 1fr;
+}
+
+.footer-grid {
+    color: white;
+    background-color: #91AA4A; 
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 6fr 1fr;
+    align-items: end;
+    justify-items: start;
+    align-content: end;
+}
+
+
+footer p {
+    margin-left: 3vw;
+}
+
+#footer-text {
+    visibility: hidden;
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+
+.grid1 {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 7fr 1fr;
+    }
+
+    #footer-text {
+        visibility: visible;
+    }
 }
