--- a/style3.css
+++ b/style3.css
@@ -41,7 +41,7 @@ h1 {
     color: #ff6ec7;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     letter-spacing: 1px;
-    padding-top: 10vh;
+    padding-top: 20vh;
     padding-bottom: 2vh;
     margin-left: 4vw;
 }
@@ -50,15 +50,23 @@ p {
     max-width: 50vh;
     margin-left: 5vw;
     margin-right: 5vw;
-    color: white;
+    color: #91AA4A;
+    font-weight: bolder;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .grid1 {
+    background-image: url('images/playingcards.png');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: auto;
     grid-template-rows: 1fr 8fr 1fr;
+    justify-items: center;
+    align-items: start;
     max-height: 100vh;
+    z-index: -2;
 }
 
 .footer-grid {
@@ -77,11 +85,15 @@ footer p {
     margin-left: 3vw;
 }
 
-#footer-text {
-    visibility: hidden;
+@media screen (min-width: 320px) {
+
+    #footer-text {
+        visibility: hidden;
+    }
+    
 }
 
-@media (min-width: 1025px) and (max-width: 1280px) {
+@media (min-width: 1025px) {
 
 .grid1 {
     display: grid;
